--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <div class="card">
     <h1>Escanear clima actual</h1>
-    <p class="small">Este demo obtiene tu ubicación, detecta la ciudad (reverse-geocoding) y solicita el clima actual para esa ubicación. Usa APIs sin llave (Open-Meteo) por defecto.</p>
+    <p class="small">Este demo obtiene tu ubicación y solicita el clima actual para esa ubicación. Usa APIs sin llave (Open-Meteo) por defecto.</p>
 
     <div style="margin:12px 0;display:flex;gap:10px;align-items:center;">
       <button id="btnScan">Escanear</button>
@@ -119,3 +119,4 @@ result.style.display = 'block';
 </script>
 </body>
 </html>
+
